# inf-lab-3

./: CMakeLists.txt  README.md
PATypes/include/PATypes/: DynamicArray.h  LinkedList.h  Sequence.h
